# treezr

./: LICENSE.md  Makefile  README.md  pyproject.toml
docs/: gurus.md  index.html  pycco.css  treezr.html  treezr.py
etc/: bash.sh  ell  hi.txt  prep.py
treezr/: __init__.py  __main__.py  code.awk  less.py  new.py  tree.py  treezr.py
